2003-11-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_toggle_mark): Removed an
	impossible-to-satisfy game-over check. Also limit the number of
	possible flags planted to be the same as the number of mines. This
	removes another odd-ball case where the player becomes confused
	(see bug #103125).
	
	* gnomine.c (main): Repackage the status bar to stop the
	"shuffling widgets" effect from the timer.

2003-10-30  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. Also consolidated the score file list under a
	variable. See bug #123192.

2003-10-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Convert the drawing functions to
	use gtk_paint_* more. Also made the cleared and uncleared cells
	use different GTK_STATEs to make them easier to distinguish (bug
	122969).

	* gnomine.c: Documented the undocumented command-line options.

2003-09-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Removed old i18n code that wasn't necessary
	and was crashing on Solaris.

2003-08-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Updated some comments, added a
	lymeric.

2003-08-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Complete rewrite to make the
	selection far more random.

2003-08-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Rewritten to be a 3-phase
	scheme. It uses Juhani Heino's code to first do a check for
	squares which are both near a mine *and* an uncleared square to
	try and give the player a bit of a hand when they are stuck with
	ambiguous hints. Unfortunately this highlights a failing with the